--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 100%;
+}
+
+#map {
+	height: 100%;
+}
+
+text {
+  font: 10px sans-serif;
+}
+
+
+
 .background {
   fill: none;
   pointer-events: all;
